// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseUnit 1`] = `
Array [
  Object {
    "name": "ア",
    "texts": Array [
      "a",
      "b",
    ],
    "type": "select",
    "vid": "",
  },
  Object {
    "name": "a",
    "type": "input",
    "vid": "",
  },
]
`;

exports[`parseUnit: parseInputs 1`] = `
Array [
  Object {
    "text": "[ア:a|b]",
    "type": "text",
    "vid": "",
  },
  Object {
    "name": "a",
    "type": "input",
    "vid": "",
  },
]
`;

exports[`parseUnit: parseSelects 1`] = `
Array [
  Object {
    "name": "ア",
    "texts": Array [
      "a",
      "b",
    ],
    "type": "select",
    "vid": "",
  },
  Object {
    "text": "(a)",
    "type": "text",
    "vid": "",
  },
]
`;

exports[`works: input 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "my name is ",
      "type": "text",
      "vid": "",
    },
    Object {
      "name": "name",
      "type": "input",
      "vid": "",
    },
    Object {
      "text": ".",
      "type": "text",
      "vid": "",
    },
  ],
  "ok": true,
}
`;

exports[`works: mix 1`] = `
Object {
  "blocks": Array [
    Object {
      "name": "ア",
      "texts": Array [
        "a",
        "b",
      ],
      "type": "select",
      "vid": "",
    },
    Object {
      "name": "a",
      "type": "input",
      "vid": "",
    },
  ],
  "ok": true,
}
`;

exports[`works: multiple 1`] = `
Object {
  "blocks": Array [
    Object {
      "name": "ア",
      "texts": Array [
        "a",
        "b",
      ],
      "type": "select",
      "vid": "",
    },
    Object {
      "name": "イ",
      "texts": Array [
        "c",
        "d",
      ],
      "type": "select",
      "vid": "",
    },
    Object {
      "name": "ウ",
      "texts": Array [
        "e",
        "f",
      ],
      "type": "select",
      "vid": "",
    },
  ],
  "ok": true,
}
`;

exports[`works: plain 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "kyoko kyoko toshino.",
      "type": "text",
      "vid": "",
    },
  ],
  "ok": true,
}
`;

exports[`works: repeat 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "before",
      "type": "text",
      "vid": "",
    },
    Object {
      "name": "m1",
      "type": "input",
      "vid": "",
    },
    Object {
      "blocks": Array [
        Object {
          "name": "stage",
          "type": "input",
          "vid": "",
        },
        Object {
          "text": "（",
          "type": "text",
          "vid": "",
        },
        Object {
          "name": "rule",
          "texts": Array [
            "a",
            "b",
          ],
          "type": "select",
          "vid": "",
        },
        Object {
          "text": "）",
          "type": "text",
          "vid": "",
        },
        Object {
          "name": "result",
          "texts": Array [
            "◯",
            "☓",
          ],
          "type": "select",
          "vid": "",
        },
      ],
      "name": "buttle",
      "type": "repeat",
    },
    Object {
      "name": "m2",
      "type": "input",
      "vid": "",
    },
    Object {
      "text": "after",
      "type": "text",
      "vid": "",
    },
  ],
  "ok": true,
}
`;

exports[`works: select 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "私は",
      "type": "text",
      "vid": "",
    },
    Object {
      "name": "poke",
      "texts": Array [
        "ゼニガメ",
        "ヒトカゲ",
        "フシギダネ",
      ],
      "type": "select",
      "vid": "",
    },
    Object {
      "text": "を選んだ",
      "type": "text",
      "vid": "",
    },
  ],
  "ok": true,
}
`;
